Fix on Mobile drag & drop event

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,8 @@ tbody:nth-child(even) tr td:nth-child(odd) {
     background-color: grey;
 }
 
-img {
+img,
+.piece-board {
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -244,7 +245,8 @@ img:active {
         height: 45px;
     }
 
-    img {
+    img,
+    .piece-board {
         width: 30px;
         height: 30px;
     }
@@ -364,7 +366,8 @@ img:active {
         height: 40px;
     }
 
-    img {
+    img,
+    .piece-board {
         width: 25px;
         height: 25px;
     }
